--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "nuxt": "3.0.0"
   },
   "dependencies": {
+    "@headlessui/vue": "^1.7.4",
     "@nuxtjs/supabase": "^0.3.0",
-    "@unocss/nuxt": "^0.47.4"
+    "@supabase/supabase-js": "^2.1.1",
+    "@unocss/nuxt": "^0.47.4",
+    "zod": "^3.19.1"
   }
 }
