--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.1.11",
+    "@types/marked": "^4.0.7",
     "nuxt": "3.0.0",
     "unocss": "^0.47.5"
   },
@@ -17,6 +18,7 @@
     "@nuxtjs/supabase": "^0.3.0",
     "@supabase/supabase-js": "^2.1.1",
     "@unocss/nuxt": "^0.47.4",
+    "marked": "^4.2.4",
     "zod": "^3.19.1"
   }
 }
